<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">安卓NGA</string>
    <string name="version">v1.1</string>
    <string name="author">作者：渐行渐远</string>
    <string name="recent">最近访问</string>
    <string name="home">首页</string>
    <string name="accounts">账号管理</string>
    <string name="settings">设置</string>
    <string name="about">关于</string>
    <string name="notification">"&#064;我"</string>
    <string name="message">短消息</string>
    <string name="block">屏蔽的人</string>
    <string name="favorite">收藏夹</string>
    <string name="location">附近的人</string>
    <string name="post">发布/编辑</string>
    <string name="noti_1"><xliff:g>%s</xliff:g> 提到你了</string>
    <string name="noti_2"><xliff:g>%s</xliff:g> 等<xliff:g>%d</xliff:g>人提到你了</string>
    <string name="noti_text">在主题 《<xliff:g>%s</xliff:g>\"》中提到你</string>
    <string name="loading">正在载入&#8230;</string>
    <string name="operating">正在操作&#8230;</string>
    <string name="uploading">正在上传&#8230;</string>
    <string name="message_empty">尚无消息</string>
    <string name="block_empty">未屏蔽任何用户</string>
    <string name="recent_empty">尚无访问记录</string>
    <string name="account_empty">尚无账号记录</string>
    <string name="topic_empty">尚无帖子</string>
    <string name="common_empty">无内容</string>
    <string name="new_message_tips">发起新的对话 收件人可填写用户ID或用户名 多个收件人用空格或逗号分隔</string>
    <string name="message_to">收件人</string>
    <string name="message_title">标题</string>
    <string name="message_content">内容</string>
    <string name="add_block_tips">添加新的屏蔽用户 被屏蔽的用户无法与你对话 屏蔽用户可填写用户ID或用户名 多个用户用空格或逗号分隔</string>
    <string name="block_username">屏蔽用户</string>
    <string name="delete">删除</string>
    <string name="delete_confirm">是否删除该账号记录？</string>
    <string name="set_default">设为默认</string>
    <string name="delete_mark_confirm">是否清空收藏夹？</string>
    <string name="delete_block_confirm">是否解除该屏蔽？</string>
    <string name="menu_clean_recent">清空访问记录</string>
    <string name="menu_add_account">添加账号</string>
    <string name="menu_refresh">刷新</string>
    <string name="menu_new_topic">发帖</string>
    <string name="menu_reply_topic">回帖</string>
    <string name="menu_search">搜索</string>
    <string name="menu_add_board">添加个人版面</string>
    <string name="menu_add_block">添加屏蔽用户</string>
    <string name="menu_new_message">写新消息</string>
    <string name="menu_mark">加入收藏</string>
    <string name="menu_del_mark">取消收藏</string>
    <string name="menu_del_all_mark">清空收藏</string>
    <string name="menu_save">保存</string>
    <string name="menu_share">分享</string>
    <string name="menu_emo">表情</string>
    <string name="menu_attach">附件</string>
    <string name="menu_lbs">位置</string>
    <string name="menu_bbscode">BBS代码</string>
    <string name="upload_tips">将要上传文件：<xliff:g>%s</xliff:g>\n（大小：<xliff:g>%s</xliff:g>）</string>
    <string name="options">操作</string>
    <string name="comment_tips">评论\n1 不超过300字，图片代码无效\n2 评论算一条回复\n3 评论页尾的帖子会被挤下去</string>
    <string name="open_url_title">是否打开该页面</string>
    <string name="open_img_title">是否打开该图片</string>
    <string name="view_image">查看图片</string>
    <string name="error_view_image">查看图片出错！</string>
    <string name="today">今天<xliff:g>%s</xliff:g></string>
    <string name="yesterday">昨天<xliff:g>%s</xliff:g></string>
    <string name="yesterday_before">前天<xliff:g>%s</xliff:g></string>
    <string name="minute_ago"><xliff:g>%d</xliff:g>分钟前</string>
    <string name="second_ago">刚刚</string>
    <string name="day_ago"><xliff:g>%d</xliff:g>天前</string>
    <string name="quote_from">[镜像]</string>
    <string name="digest">[精华]</string>
    <string name="locked">[锁定]</string>
    <string name="hide">[隐藏]</string>
    <string name="first_page_tip">当前已是第一页</string>
    <string name="last_page_tip">当前已是最后一页</string>
    <string name="prev_page">上一页</string>
    <string name="next_page">下一页</string>
    <string name="pick_page_title">选择页码</string>
    <string name="current_page">第<xliff:g example="0">%d</xliff:g>页</string>
    <string name="error_dialog_title">警告</string>
    <string name="error_message">错误: <xliff:g>%s</xliff:g></string>
    <string name="error_unknown">（未知错误）</string>
    <string name="topic_title">标题</string>
    <string name="topic_content">内容</string>
    <string name="topic_type">主题关键词</string>
    <string name="topic_icon">主题图标</string>
    <string name="topic_key_empty">无主题</string>
    <string name="topic_hide">隐藏内容 仅版主可见</string>
    <string name="topic_limit">只有作者和版主可以回复</string>
    <string name="topic_attach">已有附件：</string>
    <string name="login_tips">未登录！</string>
    <string name="send">发送</string>
    <string name="content_empty">请输入内容！</string>
    <string name="board_id">版面ID</string>
    <string name="board_id_hint">请确保输入有效的版面ID</string>
    <string name="board_title">版面标题</string>
    <string name="board_summary">版面说明</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="username_hint">UID/邮箱/昵称</string>
    <string name="login">登录</string>
    <string name="submit">提交</string>
    <string name="logining">正在登录&#8230;</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="posting">正在发表&#8230;</string>
    <string name="post_success">发表成功</string>
    <string name="post_fail">发表失败</string>
    <string name="mark_success">操作成功</string>
    <string name="mark_fail">操作失败</string>
    <string name="add_success">添加成功</string>
    <string name="add_fail">添加失败</string>
    <string name="display_setting">显示设置</string>
    <string name="list_font_size">列表字体大小</string>
    <string name="text_font_size">正文字体大小</string>
    <string name="font_size_sample">安卓NGA</string>
    <string name="display_head_setting">非WIFI环境自动下载头像</string>
    <string name="display_image_setting">非WIFI环境自动下载图片</string>
    <string name="display_sign">显示签名</string>
    <string name="small_screen_mode">爪机模式</string>
    <string name="small_screen_mode_text">开启后，图片、签名等需手动点击加载</string>
    <string name="confirm_title">链接提示</string>
    <string name="confirm_message">打开链接等前会弹出确认对话框</string>
    <string name="other_setting">其它设置</string>
    <string name="theme">主题</string>
    <string name="showtail_title">发帖显示尾巴</string>
    <string name="bbscode_list">[list]\n[*]条目1\n[*]条目2\n[*]条目3\n[*]条目4\n[/list]</string>
    <string name="bbscode_album">[album=相册标题]\nhttp://xxx.com/ooo.jpg\nhttp://xxx.com/xxx.jpg\nhttp://xxx.com/xoo.jpg\n[/album]</string>
    <string name="bbscode_collapse">[collapse=提要]\n隐藏的内容……\n[/collapse]</string>
    <string name="bbscode_customachieve">[customachieve]\n[title]成就的名字(有字数限制)[/title]\n[txt]成就的说明文字(有字数限制)[/txt]\n[img]成就的图标(绝对地址)[/img]\n[/customachieve]</string>
</resources>