<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/menu_emo"
        android:icon="@drawable/ic_menu_emoticons"
        android:title="@string/menu_emo"
        android:showAsAction="always" />
    <item
        android:id="@+id/menu_send"
        android:title="@string/send"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_attach"
        android:title="@string/menu_attach"
        android:showAsAction="collapseActionView" />
    <item
        android:id="@+id/menu_lbs"
        android:title="@string/menu_lbs"
        android:showAsAction="collapseActionView" />
    <item
        android:id="@+id/menu_bbscode"
        android:title="@string/menu_bbscode"
        android:showAsAction="collapseActionView" />
</menu>