<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_menu_search_action_bar"
        android:title="@string/menu_search"
        android:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/menu_new_topic"
        android:icon="@drawable/ic_menu_new_post_action_bar"
        android:title="@string/menu_new_topic"
        android:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_menu_refresh_small"
        android:title="@string/menu_refresh"
        android:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_trash_holo_dark"
        android:title="@string/menu_del_all_mark"
        android:showAsAction="ifRoom|withText" />
</menu>