<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/menu_clean_recent"
        android:icon="@drawable/ic_trash_holo_dark"
        android:title="@string/menu_clean_recent"
        android:visible="false"
        android:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/menu_add_board"
        android:icon="@drawable/ic_plus_holo_dark"
        android:title="@string/menu_add_board"
        android:visible="false"
        android:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/menu_add_account"
        android:icon="@drawable/ic_add_contact_holo_dark"
        android:title="@string/menu_add_account"
        android:visible="false"
        android:showAsAction="ifRoom|withText" />
</menu>